Separate loginService to separate module
Created utility package loginService.js for E2E tests to login as user, admin, (and project manager).
Credentials currently hardcoded and will need to be separated when pushed to repository.

Updated userProfile/ng-app.spec.js to use this loginService

Also updated windows webdriver.bat file to point to protractor location


Former-commit-id: 276128f15e2092986f3c04634099f6919b193981

--- a/src/angular-app/bellows/apps/userprofile/ng-app.html
+++ b/src/angular-app/bellows/apps/userprofile/ng-app.html
@@ -61,7 +61,7 @@
 					</div>
 				</tab>
 			</tabset>
-			<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+			<button style="margin-top:20px" type="submit" class="btn" id="saveBtn"><i class="icon-ok"></i>Save</button>
 			<div style="margin-top:20px" class="well">
 				<label>Last Login:  {{user.last_login * 1000 | date:shortDate}}</label>
 			</div>
