--- a/src/angular-app/bellows/apps/userprofile/ng-app.html
+++ b/src/angular-app/bellows/apps/userprofile/ng-app.html
@@ -7,7 +7,7 @@
 			<div data-ng-show="notify.error" class="notification errorMessage">Error: {{notify.error}}</div>
 			<div data-ng-show="notify.message" class="notification informationMessage">{{notify.message}}</div>
 			<tabset>
-				<tab heading="My Account">
+				<tab heading="My Account" id="MyAccountTab">
 					<label>Username: <b style="margin-left:10px">{{user.username}}</b></label>
 					<label>Picture</label>
 					<div style="margin-bottom:10px"><img class="img-polaroid" width="100px" height="100px" data-ng-src="{{user.avatar_ref}}" title="Use the dropdown selections below to change your avatar's color and shape" /></div>
@@ -19,14 +19,14 @@
 					<input type="text" placeholder="###-####" data-ng-model="user.mobile_phone"/>
 					<label>I preferred to be contacted via</label>
 					<div class="btn-group">
-						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'email'">Email</button>
-						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'sms'">SMS</button>
-						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'both'">Both</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'email'" id="EmailButton">Email</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'sms'"   id="SMSButton">SMS</button>
+						<button type="button" class="btn" data-ng-model="user.communicate_via" btn-radio="'both'"  id="BothButton">Both</button>
 					</div>
 					
 					<label style="margin-top:20px"><a href="/app/changepassword">Change Password</a></label>
 				</tab>
-				<tab heading="About Me">
+				<tab heading="About Me" id="AboutMeTab">
 					<h5>Tell us about yourself...</h5>
 					<label>Full Name</label>
 					<input type="text" placeholder="(full name)" data-ng-model="user.name"/>
