--- a/src/angular-app/bellows/apps/siteadmin/ng-app.html
+++ b/src/angular-app/bellows/apps/siteadmin/ng-app.html
@@ -11,7 +11,7 @@
 		<form class="control-bar form-inline">
 		<button class="btn" data-ng-click="removeUsers()"><i class="icon-remove"></i>Remove Users</button>
 		<button class="btn" data-ng-click="addRecord()"><i class="icon-plus"></i>Add New</button>
-		<input class="pull-right" type="text" data-ng-model="filterUsers" placeholder="Filter user list"></input>
+		<div class="pull-right"><input type="text" data-ng-model="filterUsers" placeholder="Filter user list"></input> <a ng-show="filterUsers != ''" title="Clear Filter" ng-click="filterUsers = ''"><i class="icon-remove" style="color:gray"></i></a></div>
 		</form>
 		<div listview search="queryUsers()" items="users | filter:filterUsers" visible-items="visibleUsers" select="">
 		<table class="table" style="width: 100%">
