Improve filter feature in listview
When the listview filter feature was written simply in the form of
"items='someValue | filter:someOtherValue'", everything worked fine when
loading pages normally. But when running E2E tests through Protractor,
errors like "[$rootScope:infdig] 10 $digest() iterations reached." were
showing up. The more complex approach in this commit, where the
directive itself becomes filter-aware, allows it to work both in normal
use cases and also in E2E test scenarios.


Former-commit-id: aff3730814adc26c3b920c4f06f7b3b4d0b50e83

--- a/src/angular-app/bellows/apps/siteadmin/ng-app.html
+++ b/src/angular-app/bellows/apps/siteadmin/ng-app.html
@@ -13,7 +13,7 @@
 		<button class="btn" data-ng-click="addRecord()"><i class="icon-plus"></i>Add New</button>
 		<div class="pull-right"><input type="text" data-ng-model="filterUsers" placeholder="Filter user list"></input> <a ng-show="filterUsers != ''" title="Clear Filter" ng-click="filterUsers = ''"><i class="icon-remove" style="color:gray"></i></a></div>
 		</form>
-		<div listview search="queryUsers()" items="users | filter:filterUsers" visible-items="visibleUsers" select="">
+		<div listview search="queryUsers()" items="users" items-filter="filterUsers" visible-items="visibleUsers" select="">
 		<table class="table" style="width: 100%">
 			<thead>
 			<tr>
